feat: upgrade search links to force Google AI Mode (udm=50)

--- a/src/data/display_config.json
+++ b/src/data/display_config.json
@@ -1,3 +1,10 @@
 {
-  "sections": {}
+  "sections": {
+    "basisgegevens": {
+      "visible_fields": [],
+      "hidden_fields": [
+        "ondertitel"
+      ]
+    }
+  }
 }
